# microservmatricula/server/routes.ts
@@ -1,8 +1,10 @@
 import { Application } from 'express';
 import examplesRouter from './api/controllers/examples/router';
 import alunoRouter from './api/controllers/alunos/router';
+import matriculaRouter from './api/controllers/matriculas/router';
 
 export default function routes(app: Application): void {
   app.use('/api/v1/examples', examplesRouter);
   app.use('/api/v1/alunos', alunoRouter);
+  app.use('/api/v1/matriculas', matriculaRouter);
 }
